--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,40 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <div>Navbar</div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>navbar</title>
+  </head>
+  <style>
+    #container {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      background-color: rgb(23, 23, 54);
+      color: white;
+      align-items: center;
+      padding: 10px;
+      border-radius: 20px;
+    }
+    span {
+      padding: 10px;
+    }
+    a {
+      text-decoration: none;
+      color: #fff;
+      cursor: pointer;
+    }
+  </style>
+  <body>
+    <div id="container">
+      <span>Reebok</span>
+      <div>
+        <span> <a href="./mens.html"> Men</a></span>
+        <span> <a href="./mens.html"> Women</a></span>
+        <span> <a href="./login.html"> Login</a></span>
+        <span> <a href="./singup.html"> Signup</a></span>
+      </div>
+    </div>
+  </body>
 </html>
