--- a/navbar.html
+++ b/navbar.html
@@ -33,7 +33,7 @@
         <span> <a href="./mens.html"> Men</a></span>
         <span> <a href="./mens.html"> Women</a></span>
         <span> <a href="./login.html"> Login</a></span>
-        <span> <a href="./singup.html"> Signup</a></span>
+        <span> <a href="./signup.html"> Signup</a></span>
       </div>
     </div>
   </body>
